overflow issue in firefox

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ header nav ul{
  header nav ul li a svg {
     height: 13px;
 	padding: 1em 0 1em 1em;
+	 overflow: visible;
 	
   }
 
